# shop_gjango

./: .env_sample  README.md  game_store.json  groups.json  pyproject.toml  user_data.txt
bloging/: __init__.py  admin.py  apps.py  models.py  startup.py  urls.py  views.py
bloging/migrations/: 0001_initial.py  0002_alter_blog_image.py  0003_alter_blog_image.py  0004_alter_blog_image.py
bloging/templates/bloging/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: db_work.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_category_options.py  0005_version.py  0006_alter_version_version_number.py  0007_product_user.py  0008_alter_product_options_product_is_published.py
catalog/services/: services.py
catalog/templates/catalog/: contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html  products_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_remove_user_token.py  0004_user_token.py
users/templates/: login.html
users/templates/users/: profile.html  reset_password.html  user_form.html
