[tool.poetry]
name = "shop-gjango"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shop_gjango"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
flake8 = "^7.0.0"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
